static/less/navbar.less
@import (reference) "../../node_modules/bootstrap-material-design/less/_colors.less";
@import (reference) "mixin/dim.less";

// fix for a .btn-fab in a navbar
.navbar-nav { 
  max-height: 50px; 
  
  li > a > .btn-fab {
    margin: -15px 0;
    .set-dim-all(32px, 32px);
  }

  li > a > .btn {
    color: #fff;
    background-color: @indigo-700;
  }
}

.navbar-collapse.in + #navbar-shadow,
.navbar-collapse.collapsing + #navbar-shadow {
  display: none;
}

#navbar-shadow {
  box-shadow: inset 0 5px 6px -3px rgba(0, 0, 0, 0.3);
  top: 50px;
  left: 0;
  right: 0;
  height: 6px;
  opacity: 0;
  position: absolute;
  pointer-events: none;
  transition: opacity 500ms;
}

